# CosmicTerminal

./: CMakeLists.txt  LICENSE.txt  README.md
include/: GlyphCache.h  Settings.h  SettingsDialog.h  TabBar.h  TerminalModel.h  TerminalParser.h  TerminalTab.h  TerminalWidget.h  TerminalWindow.h
include/glad/: glad.h
src/: GlyphCache.cpp  Settings.cpp  SettingsDialog.cpp  TabBar.cpp  TerminalModel.cpp  TerminalParser.cpp  TerminalWidget.cpp  TerminalWindow.cpp  glad.c  main.cpp
